[package]
name = "nix-store"
version = "0.1.0"
authors = ["jude"]
edition = "2018"

[dependencies]
serde_json = "1.0.48"
thiserror = "1.0.11"
derive_more = "0.99.3"
lazy_static = "1.4.0"
lru = "0.4.3"
rusqlite = "0.21.0"
async-trait = "0.1.24"
rust-crypto = "0.2.36"
chrono = "0.4.11"
base64 = "0.12.0"
base16 = "0.2.1"
serde = { version = "1.0.105", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.17.0" }

[build-dependencies]
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.48"

[dev-dependencies]
hex-literal = "0.2.1"
tokio = { version = "0.2.13", features = ["macros", "rt-core"] }
