[package]
name = "nix-store"
version = "0.1.0"
authors = ["jude"]
edition = "2018"

[dependencies]
thiserror = "1.0.20"
lazy_static = "1.4.0"
derive_more = "0.99.8"
rust-crypto = "0.2.36"
binascii = "0.1.4"
futures = "0.3.5"
async-recursion = "0.3.1"
async-trait = "0.1.36"
tokio = { version = "0.2.21", features = ["fs", "macros"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
bytes = "0.5.5"
rusqlite = "0.23.1"
getset = "0.1.1"

[target.'cfg(unix)'.dependencies]
nix = "0.17.0"

[dev-dependencies]
hex = "0.4.2"
assert_matches = "1.3.0"
proptest = "0.10.0"
# tempdir = "0.3.7"
